--- a/index.html
+++ b/index.html
@@ -32,12 +32,64 @@
             <h1>Lean to code.</h1>
             <h4>코딩은 진짜를 만들어보는거야!</h4>
             <h4>실제 구현되어 있는 서비스를 한땀 한땀 따라 만들면서 코딩을 배우세요.</h4>
-            <a href="join.html">Join now →</a>
+            <a href="join.html">Join now ➜</a>
         </div>
-        <div class="main__courses"></div>
-        <div class="main__challenges"></div>
+        <div class="main__courses">
+            <div class="courses__carrier">
+                <a href="" class="course__box">
+                    <img class="course__img" src="images/course1.jfif" alt="">
+                    <div class="course__summary">
+                        <h3 class="course__summary__title">[풀스택] 유튜브 클론코딩</h3>
+                        <h5 class="course__summary__intro">유튜브 백엔드 + 프런트엔드 + 배포</h5>
+                    </div>
+                </a>
+                <a href="" class="course__box">
+                    <img class="course__img" src="images/course2.jfif" alt="">
+                    <div class="course__summary">
+                        <h3 class="course__summary__title">코코아톡 클론코딩</h3>
+                        <h5 class="course__summary__intro">HTML, CSS, Github</h5>
+                    </div>
+                </a>
+                <a href="" class="course__box">
+                    <img class="course__img" src="images/course3.jfif" alt="">
+                    <div class="course__summary">
+                        <h3 class="course__summary__title">[풀스택] 에어비앤비 클론코딩</h3>
+                        <h5 class="course__summary__intro">에어비앤비 백엔드 + 프런트엔드 + 배포</h5>
+                    </div>
+                </a>
+            </div>
+            <div class="courses__carrier">
+                <a href="" class="course__box">
+                    <img class="course__img" src="images/course1.jfif" alt="">
+                    <div class="course__summary">
+                        <h3 class="course__summary__title">[풀스택] 유튜브 클론코딩</h3>
+                        <h5 class="course__summary__intro">유튜브 백엔드 + 프런트엔드 + 배포</h5>
+                    </div>
+                </a>
+                <a href="" class="course__box">
+                    <img class="course__img" src="images/course2.jfif" alt="">
+                    <div class="course__summary">
+                        <h3 class="course__summary__title">코코아톡 클론코딩</h3>
+                        <h5 class="course__summary__intro">HTML, CSS, Github</h5>
+                    </div>
+                </a>
+                <a href="" class="course__box">
+                    <img class="course__img" src="images/course3.jfif" alt="">
+                    <div class="course__summary">
+                        <h3 class="course__summary__title">[풀스택] 에어비앤비 클론코딩</h3>
+                        <h5 class="course__summary__intro">에어비앤비 백엔드 + 프런트엔드 + 배포</h5>
+                    </div>
+                </a>
+            </div>
+            <div class="main__courses__link">
+                <a href="courses.html">See all courses ➜</a>
+            </div>
+        </div>
+        <div class="main__challenges">
+            <h1></h1>
+        </div>
     </main>
-    <footer class="screen-footer">
+    <!-- <footer class="screen-footer">
         <div class="footer-introduce">
             <div class="footer-introduce__columns first__column">
                 <h6 class="footer-introduce__column-title">TRAVLER CODERS</h6>
@@ -85,7 +137,7 @@
                 <a href="#"><i class="fab fa-github"></i></a>
             </div>
         </div>
-    </footer>
+    </footer> -->
     <script src="https://kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous"></script>
 </body>
 </html>
