--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <div class="main__join">
             <h1>Clone Startups.</h1>
             <h1>Lean to code.</h1>
-            <h4>코딩은 진짜를 만들어보는거야!</h4>
-            <h4>실제 구현되어 있는 서비스를 한땀 한땀 따라 만들면서 코딩을 배우세요.</h4>
+            <h4 class="main__subheading">코딩은 진짜를 만들어보는거야!</h4>
+            <h4 class="main__subheading">실제 구현되어 있는 서비스를 한땀 한땀 따라 만들면서 코딩을 배우세요.</h4>
             <a href="join.html">Join now ➜</a>
         </div>
         <div class="main__courses">
@@ -86,10 +86,79 @@
             </div>
         </div>
         <div class="main__challenges">
-            <h1></h1>
+            <h1 class="main__challenges__title">Challenges</h1>
+            <h4 class="main__subheading">강의만으로는 부족해! 멱살잡고 캐리하는 챌린지에 무료로 참여하세요!</h4>
+            <div class="challenges__carrier">
+                <div class="challenge__box">
+                    <h1 class="challenge__title">리액트JS 2주 완성반</h1>
+                    <div class="challenge__icon__carrier">   
+                        <span class="challenge__icon"><i class="fas fa-calendar-week"></i></span>
+                        <span class="challenge__icon__title">2 weeks</span>
+                    </div>
+                    <div class="challenge__icon__carrier">
+                        <span class="challenge__icon"><i class="fas fa-users"></i></span>
+                        <span class="challenge__icon__title">150 challengers</span>
+                    </div>
+                    <div class="challenge__icon__carrier">
+                        <div class="challenge__icon"><i class="fas fa-unlock"></i></div>
+                        <span class="challenge__icon__title">Unlocks:</span>
+                        <span class="challenge__icon__img"><img src="images/html5.png"></span>
+                    </div>
+                    <h6 class="challenge__date__title">Starts in:</h6>
+                    <h1 class="challenge__date__count">04d 04h 53m 58s</h1>
+                    <a href="#">
+                        <div class="challeges__more">See More ➜</div>
+                    </a>
+                </div>
+                <div class="challenge__box">
+                    <h1 class="challenge__title">코코아 클론 2주 완성반</h1>
+                    <div class="challenge__icon__carrier">   
+                        <span class="challenge__icon"><i class="fas fa-calendar-week"></i></span>
+                        <span class="challenge__icon__title">2 weeks</span>
+                    </div>
+                    <div class="challenge__icon__carrier">
+                        <span class="challenge__icon"><i class="fas fa-users"></i></span>
+                        <span class="challenge__icon__title">150 challengers</span>
+                    </div>
+                    <div class="challenge__icon__carrier">
+                        <div class="challenge__icon"><i class="fas fa-unlock"></i></div>
+                        <span class="challenge__icon__title">Unlocks:</span>
+                        <span class="challenge__icon__img"><img src="images/html5.png"></span>
+                    </div>
+                    <h6 class="challenge__date__title">Starts in:</h6>
+                    <h1 class="challenge__date__count">04d 04h 53m 58s</h1>
+                    <a href="#">
+                        <div class="challeges__more">See More ➜</div>
+                    </a>
+                </div>
+                <div class="challenge__box">
+                    <h1 class="challenge__title">CSS Layout 2주 완성반</h1>
+                    <div class="challenge__icon__carrier">   
+                        <span class="challenge__icon"><i class="fas fa-calendar-week"></i></span>
+                        <span class="challenge__icon__title">2 weeks</span>
+                    </div>
+                    <div class="challenge__icon__carrier">
+                        <span class="challenge__icon"><i class="fas fa-users"></i></span>
+                        <span class="challenge__icon__title">150 challengers</span>
+                    </div>
+                    <div class="challenge__icon__carrier">
+                        <div class="challenge__icon"><i class="fas fa-unlock"></i></div>
+                        <span class="challenge__icon__title">Unlocks:</span>
+                        <span class="challenge__icon__img"><img src="images/html5.png"></span>
+                    </div>
+                    <h6 class="challenge__date__title">Starts in:</h6>
+                    <h1 class="challenge__date__count">04d 04h 53m 58s</h1>
+                    <a href="#">
+                        <div class="challeges__more">See More ➜</div>
+                    </a>
+                </div>
+            </div>
+            <div class="main__courses__link">
+                <a href="courses.html">See all Challenges ➜</a>
+            </div>
         </div>
     </main>
-    <!-- <footer class="screen-footer">
+    <footer class="screen-footer">
         <div class="footer-introduce">
             <div class="footer-introduce__columns first__column">
                 <h6 class="footer-introduce__column-title">TRAVLER CODERS</h6>
@@ -137,7 +206,7 @@
                 <a href="#"><i class="fab fa-github"></i></a>
             </div>
         </div>
-    </footer> -->
+    </footer>
     <script src="https://kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous"></script>
 </body>
 </html>
