--- a/challenges.html
+++ b/challenges.html
@@ -25,6 +25,187 @@
             <a class="header__column-button-join" href="join.html">Join</a>
         </div>
     </header>
+    <main class="challenges-main">
+        <div class="main__title__carrier">
+            <h1 class="main__title">Challenges</h1>
+            <h4 class="main__second-title">강의만으로는 부족해! 멱살잡고 캐리하는 챌린지에 무료로 참여하세요!</h4>
+        </div>
+        <div class="challenges__carrier">
+            <div class="challenge__box">
+                <h1 class="challenge__title">리액트JS 2주 완성반</h1>
+                <div class="challenge__icon__carrier">   
+                    <span class="challenge__icon"><i class="fas fa-calendar-week"></i></span>
+                    <span class="challenge__icon__title">2 weeks</span>
+                </div>
+                <div class="challenge__icon__carrier">
+                    <span class="challenge__icon"><i class="fas fa-users"></i></span>
+                    <span class="challenge__icon__title">150 challengers</span>
+                </div>
+                <div class="challenge__icon__carrier">
+                    <div class="challenge__icon"><i class="fas fa-unlock"></i></div>
+                    <span class="challenge__icon__title">Unlocks:</span>
+                    <span class="challenge__icon__img"><img src="images/html5.png"></span>
+                </div>
+                <h6 class="challenge__date__title">Starts in:</h6>
+                <h1 class="challenge__date__count">04d 04h 53m 58s</h1>
+                <a href="#">
+                    <div class="challeges__more">See More ➜</div>
+                </a>
+            </div>
+            <div class="challenge__box">
+                <h1 class="challenge__title">코코아 클론 2주 완성반</h1>
+                <div class="challenge__icon__carrier">   
+                    <span class="challenge__icon"><i class="fas fa-calendar-week"></i></span>
+                    <span class="challenge__icon__title">2 weeks</span>
+                </div>
+                <div class="challenge__icon__carrier">
+                    <span class="challenge__icon"><i class="fas fa-users"></i></span>
+                    <span class="challenge__icon__title">150 challengers</span>
+                </div>
+                <div class="challenge__icon__carrier">
+                    <div class="challenge__icon"><i class="fas fa-unlock"></i></div>
+                    <span class="challenge__icon__title">Unlocks:</span>
+                    <span class="challenge__icon__img"><img src="images/html5.png"></span>
+                </div>
+                <h6 class="challenge__date__title">Starts in:</h6>
+                <h1 class="challenge__date__count">04d 04h 53m 58s</h1>
+                <a href="#">
+                    <div class="challeges__more">See More ➜</div>
+                </a>
+            </div>
+            <div class="challenge__box">
+                <h1 class="challenge__title">CSS Layout 2주 완성반</h1>
+                <div class="challenge__icon__carrier">   
+                    <span class="challenge__icon"><i class="fas fa-calendar-week"></i></span>
+                    <span class="challenge__icon__title">2 weeks</span>
+                </div>
+                <div class="challenge__icon__carrier">
+                    <span class="challenge__icon"><i class="fas fa-users"></i></span>
+                    <span class="challenge__icon__title">150 challengers</span>
+                </div>
+                <div class="challenge__icon__carrier">
+                    <div class="challenge__icon"><i class="fas fa-unlock"></i></div>
+                    <span class="challenge__icon__title">Unlocks:</span>
+                    <span class="challenge__icon__img"><img src="images/html5.png"></span>
+                </div>
+                <h6 class="challenge__date__title">Starts in:</h6>
+                <h1 class="challenge__date__count">04d 04h 53m 58s</h1>
+                <a href="#">
+                    <div class="challeges__more">See More ➜</div>
+                </a>
+            </div>
+        </div>
+        <div class="challenges__carrier">
+            <div class="challenge__box">
+                <h1 class="challenge__title">리액트JS 2주 완성반</h1>
+                <div class="challenge__icon__carrier">   
+                    <span class="challenge__icon"><i class="fas fa-calendar-week"></i></span>
+                    <span class="challenge__icon__title">2 weeks</span>
+                </div>
+                <div class="challenge__icon__carrier">
+                    <span class="challenge__icon"><i class="fas fa-users"></i></span>
+                    <span class="challenge__icon__title">150 challengers</span>
+                </div>
+                <div class="challenge__icon__carrier">
+                    <div class="challenge__icon"><i class="fas fa-unlock"></i></div>
+                    <span class="challenge__icon__title">Unlocks:</span>
+                    <span class="challenge__icon__img"><img src="images/html5.png"></span>
+                </div>
+                <h6 class="challenge__date__title">Starts in:</h6>
+                <h1 class="challenge__date__count">04d 04h 53m 58s</h1>
+                <a href="#">
+                    <div class="challeges__more">See More ➜</div>
+                </a>
+            </div>
+            <div class="challenge__box">
+                <h1 class="challenge__title">코코아 클론 2주 완성반</h1>
+                <div class="challenge__icon__carrier">   
+                    <span class="challenge__icon"><i class="fas fa-calendar-week"></i></span>
+                    <span class="challenge__icon__title">2 weeks</span>
+                </div>
+                <div class="challenge__icon__carrier">
+                    <span class="challenge__icon"><i class="fas fa-users"></i></span>
+                    <span class="challenge__icon__title">150 challengers</span>
+                </div>
+                <div class="challenge__icon__carrier">
+                    <div class="challenge__icon"><i class="fas fa-unlock"></i></div>
+                    <span class="challenge__icon__title">Unlocks:</span>
+                    <span class="challenge__icon__img"><img src="images/html5.png"></span>
+                </div>
+                <h6 class="challenge__date__title">Starts in:</h6>
+                <h1 class="challenge__date__count">04d 04h 53m 58s</h1>
+                <a href="#">
+                    <div class="challeges__more">See More ➜</div>
+                </a>
+            </div>
+            <div class="challenge__box">
+                <h1 class="challenge__title">CSS Layout 2주 완성반</h1>
+                <div class="challenge__icon__carrier">   
+                    <span class="challenge__icon"><i class="fas fa-calendar-week"></i></span>
+                    <span class="challenge__icon__title">2 weeks</span>
+                </div>
+                <div class="challenge__icon__carrier">
+                    <span class="challenge__icon"><i class="fas fa-users"></i></span>
+                    <span class="challenge__icon__title">150 challengers</span>
+                </div>
+                <div class="challenge__icon__carrier">
+                    <div class="challenge__icon"><i class="fas fa-unlock"></i></div>
+                    <span class="challenge__icon__title">Unlocks:</span>
+                    <span class="challenge__icon__img"><img src="images/html5.png"></span>
+                </div>
+                <h6 class="challenge__date__title">Starts in:</h6>
+                <h1 class="challenge__date__count">04d 04h 53m 58s</h1>
+                <a href="#">
+                    <div class="challeges__more">See More ➜</div>
+                </a>
+            </div>
+        </div>
+        <div class="challenges__carrier">
+            <div class="challenge__box">
+                <h1 class="challenge__title">리액트JS 2주 완성반</h1>
+                <div class="challenge__icon__carrier">   
+                    <span class="challenge__icon"><i class="fas fa-calendar-week"></i></span>
+                    <span class="challenge__icon__title">2 weeks</span>
+                </div>
+                <div class="challenge__icon__carrier">
+                    <span class="challenge__icon"><i class="fas fa-users"></i></span>
+                    <span class="challenge__icon__title">150 challengers</span>
+                </div>
+                <div class="challenge__icon__carrier">
+                    <div class="challenge__icon"><i class="fas fa-unlock"></i></div>
+                    <span class="challenge__icon__title">Unlocks:</span>
+                    <span class="challenge__icon__img"><img src="images/html5.png"></span>
+                </div>
+                <h6 class="challenge__date__title">Starts in:</h6>
+                <h1 class="challenge__date__count">04d 04h 53m 58s</h1>
+                <a href="#">
+                    <div class="challeges__more">See More ➜</div>
+                </a>
+            </div>
+            <div class="challenge__box">
+                <h1 class="challenge__title">코코아 클론 2주 완성반</h1>
+                <div class="challenge__icon__carrier">   
+                    <span class="challenge__icon"><i class="fas fa-calendar-week"></i></span>
+                    <span class="challenge__icon__title">2 weeks</span>
+                </div>
+                <div class="challenge__icon__carrier">
+                    <span class="challenge__icon"><i class="fas fa-users"></i></span>
+                    <span class="challenge__icon__title">150 challengers</span>
+                </div>
+                <div class="challenge__icon__carrier">
+                    <div class="challenge__icon"><i class="fas fa-unlock"></i></div>
+                    <span class="challenge__icon__title">Unlocks:</span>
+                    <span class="challenge__icon__img"><img src="images/html5.png"></span>
+                </div>
+                <h6 class="challenge__date__title">Starts in:</h6>
+                <h1 class="challenge__date__count">04d 04h 53m 58s</h1>
+                <a href="#">
+                    <div class="challeges__more">See More ➜</div>
+                </a>
+            </div>
+            <div class="challenge__box challenge__box--hidden"></div>
+        </div>
+    </main>
     <footer class="screen-footer">
         <div class="footer-introduce">
             <div class="footer-introduce__columns first__column">
