--- a/faq.html
+++ b/faq.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    
     <header class="screen-header">
         <div class="header__columns header__column-logo">
             <a href="index.html">
@@ -26,6 +25,12 @@
             <a class="header__column-button-join" href="join.html">Join</a>
         </div>
     </header>
+    <main>
+        <div class="main__title__carrier">
+            <h1 class="main__title">FAQ</h1>
+            <h4 class="main__second-title">궁금한 것이 있다구요?</h4>
+        </div>
+    </main>
     <footer class="screen-footer">
         <div class="footer-introduce">
             <div class="footer-introduce__columns first__column">
