--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 </div>
             </div>
             <div class="main__courses__link">
-                <a href="courses.html">See all Challenges ➜</a>
+                <a href="challenges.html">See all Challenges ➜</a>
             </div>
         </div>
     </main>
