--- a/challenges.html
+++ b/challenges.html
@@ -94,8 +94,6 @@
                     <div class="challeges__more">See More ➜</div>
                 </a>
             </div>
-        </div>
-        <div class="challenges__carrier">
             <div class="challenge__box">
                 <h1 class="challenge__title">리액트JS 2주 완성반</h1>
                 <div class="challenge__icon__carrier">   
@@ -159,8 +157,6 @@
                     <div class="challeges__more">See More ➜</div>
                 </a>
             </div>
-        </div>
-        <div class="challenges__carrier">
             <div class="challenge__box">
                 <h1 class="challenge__title">리액트JS 2주 완성반</h1>
                 <div class="challenge__icon__carrier">   
@@ -255,6 +251,9 @@
             </div>
         </div>
     </footer>
+    <div id="no-mobile">
+        <span>Your Screen Is Too Small😥</span>
+    </div>
     <script src="https://kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous"></script>
 </body>
 </html>
