--- a/index.html
+++ b/index.html
@@ -36,50 +36,60 @@
         </div>
         <div class="main__courses">
             <div class="courses__carrier">
-                <a href="" class="course__box">
-                    <img class="course__img" src="images/course1.jfif" alt="">
-                    <div class="course__summary">
-                        <h3 class="course__summary__title">[풀스택] 유튜브 클론코딩</h3>
-                        <h5 class="course__summary__intro">유튜브 백엔드 + 프런트엔드 + 배포</h5>
-                    </div>
-                </a>
-                <a href="" class="course__box">
-                    <img class="course__img" src="images/course2.jfif" alt="">
-                    <div class="course__summary">
-                        <h3 class="course__summary__title">코코아톡 클론코딩</h3>
-                        <h5 class="course__summary__intro">HTML, CSS, Github</h5>
-                    </div>
-                </a>
-                <a href="" class="course__box">
-                    <img class="course__img" src="images/course3.jfif" alt="">
-                    <div class="course__summary">
-                        <h3 class="course__summary__title">[풀스택] 에어비앤비 클론코딩</h3>
-                        <h5 class="course__summary__intro">에어비앤비 백엔드 + 프런트엔드 + 배포</h5>
-                    </div>
-                </a>
-            </div>
-            <div class="courses__carrier">
-                <a href="" class="course__box">
-                    <img class="course__img" src="images/course1.jfif" alt="">
-                    <div class="course__summary">
-                        <h3 class="course__summary__title">[풀스택] 유튜브 클론코딩</h3>
-                        <h5 class="course__summary__intro">유튜브 백엔드 + 프런트엔드 + 배포</h5>
-                    </div>
-                </a>
-                <a href="" class="course__box">
-                    <img class="course__img" src="images/course2.jfif" alt="">
-                    <div class="course__summary">
-                        <h3 class="course__summary__title">코코아톡 클론코딩</h3>
-                        <h5 class="course__summary__intro">HTML, CSS, Github</h5>
-                    </div>
-                </a>
-                <a href="" class="course__box">
-                    <img class="course__img" src="images/course3.jfif" alt="">
-                    <div class="course__summary">
-                        <h3 class="course__summary__title">[풀스택] 에어비앤비 클론코딩</h3>
-                        <h5 class="course__summary__intro">에어비앤비 백엔드 + 프런트엔드 + 배포</h5>
-                    </div>
-                </a>
+                <div class="course__box">
+                    <a href="">
+                        <img class="course__img" src="images/course1.jfif" alt="">
+                        <div class="course__summary">
+                            <h3 class="course__summary__title">[풀스택] 유튜브 클론코딩</h3>
+                            <h5 class="course__summary__intro">유튜브 백엔드 + 프런트엔드 + 배포</h5>
+                        </div>
+                    </a>
+                </div>
+                <div class="course__box">
+                    <a href="">
+                        <img class="course__img" src="images/course2.jfif" alt="">
+                        <div class="course__summary">
+                            <h3 class="course__summary__title">코코아톡 클론코딩</h3>
+                            <h5 class="course__summary__intro">HTML, CSS, Github</h5>
+                        </div>
+                    </a>
+                </div>
+                <div class="course__box">
+                    <a href="">
+                        <img class="course__img" src="images/course3.jfif" alt="">
+                        <div class="course__summary">
+                            <h3 class="course__summary__title">[풀스택] 에어비앤비 클론코딩</h3>
+                            <h5 class="course__summary__intro">에어비앤비 백엔드 + 프런트엔드 + 배포</h5>
+                        </div>
+                    </a>
+                </div>
+                <div class="course__box">
+                    <a href="">
+                        <img class="course__img" src="images/course1.jfif" alt="">
+                        <div class="course__summary">
+                            <h3 class="course__summary__title">[풀스택] 유튜브 클론코딩</h3>
+                            <h5 class="course__summary__intro">유튜브 백엔드 + 프런트엔드 + 배포</h5>
+                        </div>
+                    </a>
+                </div>
+                <div class="course__box">
+                    <a href="">
+                        <img class="course__img" src="images/course2.jfif" alt="">
+                        <div class="course__summary">
+                            <h3 class="course__summary__title">코코아톡 클론코딩</h3>
+                            <h5 class="course__summary__intro">HTML, CSS, Github</h5>
+                        </div>
+                    </a>
+                </div>
+                <div class="course__box">
+                    <a href="">
+                        <img class="course__img" src="images/course3.jfif" alt="">
+                        <div class="course__summary">
+                            <h3 class="course__summary__title">[풀스택] 에어비앤비 클론코딩</h3>
+                            <h5 class="course__summary__intro">에어비앤비 백엔드 + 프런트엔드 + 배포</h5>
+                        </div>
+                    </a>
+                </div>
             </div>
             <div class="main__courses__link">
                 <a href="courses.html">See all courses ➜</a>
@@ -153,7 +163,7 @@
                     </a>
                 </div>
             </div>
-            <div class="main__courses__link">
+            <div class="main__challenges__link">
                 <a href="challenges.html">See all Challenges ➜</a>
             </div>
         </div>
@@ -207,6 +217,9 @@
             </div>
         </div>
     </footer>
+    <div id="no-mobile">
+        <span>Your Screen Is Too Small😥</span>
+    </div>
     <script src="https://kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous"></script>
 </body>
 </html>
