--- a/roadmap.html
+++ b/roadmap.html
@@ -80,6 +80,9 @@
             </div>
         </div>
     </footer>
+    <div id="no-mobile">
+        <span>Your Screen Is Too Small😥</span>
+    </div>
     <script src="https://kit.fontawesome.com/6478f529f2.js" crossorigin="anonymous"></script>
 </body>
 </html>
